<resources>
    <string name="app_name">MomStrongMove</string>
    <string name="manage_account">Manage My Account</string>
    <string name="notifications">Notifications</string>
    <string name="follow_meg">Follow Meg</string>
    <string name="refer_friend">Refer A Friend</string>
    <string name="log_out">Log Out</string>
    <string name="progress">Progress</string>
    <string name="gym_strong">Gym Strong</string>
    <string name="home_Strong">Home Strong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="tab_text_1">Goals</string>
    <string name="tab_text_2">Monthly</string>
    <string name="tab_text_3">Yearly</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="state">State</string>
    <string name="account_edit_button">Edit</string>
    <string name="notification_text_label">Notification</string>
    <string name="meg_message_label">Meg\'s Message</string>
    <string name="new_workouts_label">New Workouts</string>
    <string name="push_notification_label">Push Notifications</string>
    <string name="follow_meg_label">Follow Meg</string>
    <string name="meg_instagram">Meg\'s Instagram</string>
    <string name="momstrongutah_button">\@momstrongutah</string>
    <string name="momstrongmove_label">\@momstrongmove</string>
    <string name="refer_freind_label">Refer A Friend</string>
    <string name="google_play_label">Google Play Store Link</string>
    <string name="google_play_button">Share Momstrong Move App</string>
    <string name="at_home_workouts_label">At Home Workouts</string>
    <string name="home_progress_label">This Week\'s Progress</string>
    <string name="home_percentage_label">0%</string>
    <string name="home_workouts_label">This Week\'s Workouts</string>
    <string name="video_row_label">Total Body/ Cardio</string>
    <string name="home_comment_label">My favorite of the week</string>
    <string name="home_duration_label">Duration: 36 Minutes</string>
    <string name="home_equipment_label">Equipment: 5# and 10# Dumbells</string>
    <string name="gym_workouts_label">Gym Workouts</string>
    <string name="gym_workout_cell_title">Upper Body/Care</string>
    <string name="gym_workout_cell_message">Get excited Upper Body and Core coming</string>
    <string name="gym_cell_view_button">View</string>
    <string name="gym_cell_complete_button">Mark Complete</string>
    <string name="personal_goals_textView">Personal Goals</string>
    <string name="fragment_month_textView">Days I Completed My Workout</string>
    <string name="year_textView">My Year of Momstrong Move Progress</string>
    <string name="year_row_month_textView">Month</string>
    <string name="year_row_percentage_textView">0%</string>
    <string name="gym_strong_detail_title">Upper Body/ Core</string>
    <string name="gym_detail_header_comment">Come out of this one feeling the burn!</string>
    <string name="gym_detail_section_title">Warm-up</string>
    <string name="gum_detail_row_section_summary">Repaet this 2 - 3 x</string>
</resources>
