<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <Button
            android:text="@string/manage_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manage_account_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notifications_button" app:layout_constraintStart_toStartOf="@+id/manage_account_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/manage_account_button" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/follow_meg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follow_meg_button" app:layout_constraintStart_toStartOf="@+id/notifications_button"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/notifications_button"
            android:background="@color/colorWhite"/>
    <Button
            android:text="@string/refer_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refer_friend_button" app:layout_constraintStart_toStartOf="@+id/follow_meg_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/follow_meg_button"
            android:background="@color/colorWhite"/>
    <Button
            android:text="@string/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_out_button" app:layout_constraintStart_toStartOf="@+id/refer_friend_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/refer_friend_button"
            android:background="@color/colorWhite"/>
</android.support.constraint.ConstraintLayout>