<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FollowMegActivity">

    <TextView
            android:text="@string/follow_meg_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/follow_meg_label"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/meg_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/follow_meg_label"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/follow_meg_label"/>
    <Button
            android:text="@string/momstrongutah_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/momstrongutah_button" app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Button
            android:text="@string/momstrongmove_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/momstrongmove_button" app:layout_constraintStart_toStartOf="@+id/momstrongutah_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/momstrongutah_button"/>
</android.support.constraint.ConstraintLayout>