<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountActivity" android:id="@+id/account_edit_button">

    <TextView
            android:text="@string/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
    />
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text_label" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_text_label" app:layout_constraintStart_toStartOf="@+id/name_text_label"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/name_text_label"/>
    <TextView
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age_text_label" app:layout_constraintStart_toStartOf="@+id/email_text_label"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email_text_label"/>
    <TextView
            android:text="@string/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/state_text_label" app:layout_constraintStart_toStartOf="@+id/age_text_label"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/age_text_label"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/name_text_field"
            android:autofillHints="@string/name"
            app:layout_constraintStart_toEndOf="@+id/name_text_label" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/name_text_label"
            app:layout_constraintBottom_toBottomOf="@+id/name_text_label" android:background="@color/colorWhite"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text_field"
            android:autofillHints="@string/email"
            app:layout_constraintTop_toTopOf="@+id/email_text_label"
            app:layout_constraintBottom_toBottomOf="@+id/email_text_label"
            app:layout_constraintStart_toStartOf="@+id/name_text_field"
            android:background="@color/colorWhite" android:clickable="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/age_text_field"
            android:autofillHints="@string/age"
            app:layout_constraintStart_toStartOf="@+id/email_text_field"
            app:layout_constraintTop_toTopOf="@+id/age_text_label"
            app:layout_constraintBottom_toBottomOf="@+id/age_text_label" android:background="@color/colorWhite"
            android:clickable="false"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/state_text_field"
            android:autofillHints="@string/state"
            app:layout_constraintStart_toStartOf="@+id/age_text_field"
            app:layout_constraintBottom_toBottomOf="@+id/state_text_label"
            app:layout_constraintTop_toTopOf="@+id/state_text_label" android:background="@color/colorWhite"
            android:clickable="false"/>
    <Button
            android:text="@string/account_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/state_text_field"/>
</android.support.constraint.ConstraintLayout>