<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NotificationActivity">

    <TextView
            android:text="@string/notification_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification_text_label"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notification_switch"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/message_push_label"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/message_push_label" app:layout_constraintTop_toTopOf="@+id/message_push_label"/>
    <TextView
            android:text="@string/meg_message_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meg_message_label"
            app:layout_constraintTop_toBottomOf="@+id/notification_text_label"
            app:layout_constraintStart_toStartOf="@+id/notification_text_label"
            android:layout_marginTop="24dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/push_notification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message_push_label"
            app:layout_constraintTop_toBottomOf="@+id/meg_message_label"
            app:layout_constraintStart_toStartOf="@+id/meg_message_label"
            android:textSize="12sp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/new_workouts_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_workouts_label" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message_push_label"
            app:layout_constraintStart_toStartOf="@+id/meg_message_label"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/push_notification_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/workouts_push_label" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/new_workouts_label" app:layout_constraintStart_toStartOf="@+id/new_workouts_label"
            android:textSize="12sp"/>
    <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/workouts_switch" app:layout_constraintStart_toStartOf="@+id/notification_switch"
            app:layout_constraintEnd_toEndOf="@+id/notification_switch"
            app:layout_constraintTop_toTopOf="@+id/workouts_push_label"
            app:layout_constraintBottom_toBottomOf="@+id/workouts_push_label" android:checked="true"/>
</android.support.constraint.ConstraintLayout>