<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/home_video_pic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/video_row_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/video_row_label"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/home_video_pic" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/home_video_row_play_button" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="24sp" android:textStyle="bold"
            android:textColor="#FA030303"/>
    <TextView
            android:text="@string/home_comment_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/home_comment_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/video_row_label"
            app:layout_constraintStart_toStartOf="@+id/video_row_label"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/home_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/home_duration_label"
            app:layout_constraintStart_toStartOf="@+id/home_comment_label"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/home_comment_label"
            android:textSize="12sp"/>
    <TextView
            android:text="@string/home_equipment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_equipment_label" app:layout_constraintStart_toStartOf="@+id/home_duration_label"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/home_duration_label" android:textSize="12sp"/>
    <Button
            android:layout_width="55dp"
            android:layout_height="36dp"
            android:id="@+id/home_video_row_play_button"
            android:background="@android:drawable/ic_media_play"
            app:layout_constraintEnd_toEndOf="@+id/home_video_pic" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/video_row_label"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="395dp"
            android:layout_height="40dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/home_equipment_label"
            app:layout_constraintStart_toStartOf="@+id/home_video_pic"
            app:layout_constraintEnd_toEndOf="@+id/home_video_pic" android:layout_marginTop="8dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/checkbox_off_background"
            android:id="@+id/home_mark_complete_button"
            app:layout_constraintTop_toTopOf="@+id/divider3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/divider3"
            app:layout_constraintEnd_toEndOf="@+id/divider3" android:layout_marginEnd="160dp"
            android:layout_marginRight="160dp" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>